<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_unknown_error">Sorry</string>
    <string name="error_authentication_canceled">Authentification Canceled</string>

    <!-- Menu Drawer -->
    <string name="map">Map</string>
    <string name="all_property">All Property</string>
    <string name="property">My Property</string>
    <string name="logout">Logout</string>
    <string name="add_property">Add a Property</string>

    <!-- Easy Permissions -->
    <string name="popup_title_permission_files_access">We need permissions to access your Picture</string>
    <string name="popup_title_permission_camera_access">We need permissions to access your Camera</string>
    <string name="popup_title_permission_location_access">We need your permission to access on your location</string>
    <string name="toast_title_no_image_chosen">You don\'t choose any file</string>
    <string name="toast_title_image_chosen">You image has been added</string>

    <!-- Add property -->
    <string name="need_all_fields">Please add all fields</string>
    <string name="add_an_address">Add an Address</string>
    <string name="number_address">Number</string>
    <string name="way_address">Way</string>
    <string name="postcode_address">PostCode</string>
    <string name="additional_address_fields">Additional address fields</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="property_added">Property Added</string>
    <string name="added_correctly">The property has been added correctly</string>
    <string name="description_dialogue_text">write the description of the image or leave blank</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="image_choise_dialog_title">Get image choice</string>
    <string name="image_choise_dialog_text">how do you want get image</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="property_images">Property Images</string>
    <string name="add_new_image">Add new Image</string>
    <string name="add_a_image">Add a Image</string>
    <string name="validate">Validate</string>
    <string name="change">Change</string>
    <string name="add_a_property">Add a Property</string>
    <string name="type_of_property">Type of Property</string>
    <string name="price">Price</string>
    <string name="price_of_property_in_dollars">Price of property in dollars</string>
    <string name="location">Location</string>
    <string name="located_city_name">Located City Name</string>
    <string name="image">Image</string>
    <string name="add_a_preview_image">Add a preview Image</string>
    <string name="other_feature">Other Feature</string>
    <string name="status_of_property">Status of Property</string>
    <string name="rooms">Rooms</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="date">Date</string>
    <string name="entrance_date_of_property">Entrance date of Property</string>
    <string name="surface">Surface</string>
    <string name="surface_of_property_in_m">surface of property in m²</string>

    <!-- Details property -->
    <string name="default_image_url">android.resource://com.openclassrooms.realestatemanager/</string>
    <string name="not_sale">Not Sold</string>
    <string name="metric">\ m²</string>
    <string name="sale">Sold</string>
    <string name="free">Free</string>
    <string name="usd">USD</string>
    <string name="congratulation">Congratulation</string>
    <string name="set_property">Please set property Feature First</string>
    <string name="select_date">Please select a date</string>
    <string name="sale_maj">SOLD</string>
    <string name="please_set_address_to_property_for_geolocalisation">Please set Address to property for Geolocalisation</string>
    <string name="description">Description</string>
    <string name="main_features">Main Features</string>
    <string name="type">Type :</string>
    <string name="price_details">Price :</string>
    <string name="location_details">Location :</string>
    <string name="address">Address</string>
    <string name="number">Number :</string>
    <string name="postcode">PostCode :</string>
    <string name="way">Way :</string>
    <string name="additional">Additional :</string>
    <string name="other_features">Other Features</string>
    <string name="status">Status :</string>
    <string name="surface_details">Surface :</string>
    <string name="number_of_rooms_details">Number of Rooms :</string>
    <string name="bedrooms_details">Bedrooms :</string>
    <string name="bathrooms_details">Bathrooms :</string>
    <string name="entrance_date">Entrance Date :</string>
    <string name="sale_date">Sold Date :</string>
    <string name="point_of_interest">Point Of Interest</string>
    <string name="geo_localisation">Geo Localisation</string>
    <string name="update_maj">UPDATE</string>
    <string name="for_sale_maj">SELL</string>

    <string name="surface_update_change">Surface : Min : %1$d Max : %2$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_position">my_position</string>
    <string name="agent">Agent :</string>
    <string name="unable_find_location">Unable to find location. Please try later</string>
    <string name="sorry_no_data">Sorry no data found</string>
    <string name="empty_string">null</string>
    <string name="default_date">01/01/1900</string>
    <string name="settings">settings</string>
    <string name="entrance_date_search">Entrance Date</string>
    <string name="select_currency">Select currency</string>
    <string name="select_currency_message">Choose the currency of app :</string>
    <string name="update_scope">Update Scope</string>
    <string name="scope">Scope</string>
    <string name="scope_updated">Your scope have been updated</string>
    <string name="scope_update_error">The scope must be between 2 and 25 Km</string>
    <string name="scope_not_update">Your scope haven\'t been updated</string>
    <string name="point_of_interest_updated">Your proximity point of interest have been updated</string>
    <string name="currency_updated">The currency have been updated</string>
    <string name="point_of_interest_dialog_title">Select point of Interest</string>
    <string name="scope_dialog_title">Choose the search scope of app in (Km):</string>
    <string name="min_number_pic">Min number pic</string>
    <string name="town">Town</string>
    <string name="search">Search</string>
    <string name="enter_point_of_interest_split_with_space">Enter point of interest split with space</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="real_estate_manager">Real Estate Manager</string>
    <string name="sign_in_with_mail">Sign In with Mail</string>
    <string name="sign_in_with_google">Sign In with Google</string>

</resources>
