<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".addproperty.AddressFeature">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/add_an_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textColor="@color/colorGold"
                android:fontFamily="@font/great_vibes"
                android:layout_marginTop="50dp"/>
        <TextView
                android:layout_width="209dp"
                android:layout_height="12dp"
                android:id="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/underline"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_address_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginTop="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_address" android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/way_address_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_address_input"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/way_address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/way_address"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postcode_address_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/way_address_input"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postcode_address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postcode_address" android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/additional_address_fields_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postcode_address_input"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/additional_address_fields_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/additional_address_fields"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:id="@+id/back_btn"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/additional_address_fields_input"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toStartOf="@+id/next_btn">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/back"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/back_text"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/colorGold"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:fontFamily="@font/special_elite"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:id="@+id/next_btn"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"
                app:layout_constraintTop_toTopOf="@+id/back_btn">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/next"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/next_text"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/colorGold"
                        android:textAlignment="center"
                        android:textSize="24sp" android:fontFamily="@font/special_elite"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>